// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dot displays when active 1`] = `
<button
  className="dot active"
  data-target={1}
  id="dot-0"
  onClick={undefined}
/>
`;

exports[`Dot displays when inactive 1`] = `
<button
  className="dot "
  data-target={1}
  id="dot-0"
  onClick={undefined}
/>
`;
